Modified start page

--- a/modules/templates/start.html
+++ b/modules/templates/start.html
@@ -15,7 +15,7 @@
     <div class="image-bg">
         <div class="about">
             <ul>
-                <li><img class="icons" src="https://image.flaticon.com/icons/svg/3176/3176330.svg" alt=""> Follow your interest</li>
+                <li><img class="icons" src="https://image.flaticon.com/icons/svg/3176/3176330.svg" alt=""> Lol this is a test</li>
                 <li><img src="https://image.flaticon.com/icons/svg/615/615075.svg" alt="" class="icons">Hear what people are talking about</li>
                 <li><img src="https://image.flaticon.com/icons/svg/3094/3094824.svg" alt="" class="icons">Join the conversation</li>
             </ul>
